Fix clipping on small screens

--- a/src/components/HomeHeader/HomeHeader.module.scss
+++ b/src/components/HomeHeader/HomeHeader.module.scss
@@ -104,6 +104,12 @@
 }
 
 @media only screen and (max-width: 720px) {
+  .fullHeader {
+    width: 100%;
+  }
+  .smallHeader {
+    width: 100%;
+  }
   .fixedSelector {
     width: 100%;
   }
