--- a/src/components/NavMenu/NavMenu.module.scss
+++ b/src/components/NavMenu/NavMenu.module.scss
@@ -38,6 +38,6 @@
   .callToAction {
     position: fixed;
     bottom: 56px;
-    right: 12px;
+    right: 24px;
   }
 }
